# okulib

./: README.md  check.py  config.py  main.py  pyproject.toml
data/manas/: chunks.json
data/semetey/: chunks.json  index.faiss
data/syngan_kylych/: chunks.json
data/uzak_jol/: chunks.json  index.faiss
raw_data/: manas.txt  semetey.txt  syngan_kylych.txt  uzak_jol.txt
routers/: ask.py
services/: embedder.py
services/app_services/: llm.py  llm_client.py  search.py
services/data_services/: chunker.py  prepare_data.py
